--- a/code-front.html
+++ b/code-front.html
@@ -85,6 +85,7 @@
     .user 
     {
       background: #090963;
+      color: #ffffff;
       align-self: flex-end;
       border-bottom-right-radius: 4px;
     }
