--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   
   <meta charset="UTF-8">
   <title>Dinamo ChatBot</title>
-  <link rel="icon" type="img/png" href="img/Dinamo-normal.png"> 
-  
+  <link rel="icon" type="img/png" href="img/Dinamo-normal.png">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/contrib/auto-render.min.js"
+          onload="renderMathInElement(document.body, {
+            delimiters: [
+              {left: '$$', right: '$$', display: true},
+              {left: '$', right: '$', display: false},
+              {left: '\\[', right: '\\]', display: true},
+              {left: '\\(', right: '\\)', display: false}
+            ]
+          });"></script>
+
+
   <style>
     
     body 
