--- a/index.html
+++ b/index.html
@@ -59,18 +59,35 @@
       letter-spacing: 1px;
     }
 
-    .chat-messages
-   {
+    .chat-messages {
       flex: 1;
-      padding: 15px;
+      padding: 18px;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      background: url("img/Dinamo-transparente.png") no-repeat center center fixed; 
-      background-size: 400px 455.6px; 
-      opacity: 0.50; 
+      gap: 12px;
+      position: relative; /* necessário para usar ::before */
+      background: none;   /* remove direto do container */
     }
+
+    .chat-messages::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: url("img/Dinamo-transparente.png") no-repeat center center;
+      background-size: 300px auto;
+      opacity: 0.3;          /* só a imagem fica translúcida */
+      z-index: 0;            /* fica atrás do texto */
+    }
+
+    .message {
+      position: relative;
+      z-index: 1;             /* garante que o texto fique na frente */
+    }
+
 
     .message
    {
@@ -84,7 +101,7 @@
 
     .user 
     {
-      background: #090963;
+      background: #4949c5;
       color: #ffffff;
       align-self: flex-end;
       border-bottom-right-radius: 4px;
@@ -92,7 +109,7 @@
 
     .bot
     {
-      background: #1603e9;
+      background: #8881d4;
       color: #ffffff;
       align-self: flex-start;
       border-bottom-left-radius: 4px;
